--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,16 +20,19 @@
         <% if book.favorited_by?(current_user) %>
           <td>
             <%= link_to book_favorites_path(book), method: :delete do %>
-             ♥<%= book.favorites.count %> いいね
+             ♥<%= book.favorites.count %>
             <% end %>
           </td>
         <% else %>
           <td>
             <%= link_to book_favorites_path(book), method: :post do %>
-             ♡<%= book.favorites.count %> いいね
+             ♡<%= book.favorites.count %>
             <% end %>
           </td>
         <% end %>
+        <td>
+          <p>コメント件数：<%= @book.book_comments.count %></p>
+        </td>
       </tr>
     <% end %>
   </tbody>
