--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,9 +10,10 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td>
+            <%= link_to(@book.user) do %>
+              <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
@@ -23,6 +24,35 @@
           <% end %>
         </tr>
       </table>
+
+      <table class='table'>
+        <tr>
+          <% @book.book_comments.each do |book_comment| %>
+            <td>
+              <%= link_to (@book.user) do %>
+                <%= image_tag book_comment.user.get_profile_image, size: '100x100' %><br>
+                <%= book_comment.user.name %>
+              <% end %>
+            </td>
+            <td><%= book_comment.comment %></td>
+          <% end %>
+        </tr>
+      </table>
+
+      <table class="table">
+        <tr>
+          <%= form_with model: [@book, @book_comment] do |f| %>
+            <td><%= f.text_area :comment, rows: '10', placeholder: "コメントをここに" %></td>
+            <td><%= f.submit "送信" %></td>
+            <td>
+              <% if @book_comment.user == current_user %>
+                <%= link_to 'Destroy', book_book_comment_path(@book.id), method: :delete %>
+              <% end %>
+            </td>
+          <% end %>
+        </tr>
+      </table>
+
     </div>
   </div>
 </div>
