--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,13 +20,14 @@
         <% if book.favorited_by?(current_user) %>
           <td>
             <%= link_to book_favorites_path(book), method: :delete do %>
-             ♥<%= book.favorites.count %>
+             <%# FontAwesomeはaタグの中では使えないのでiクラスで使用する %>
+             <i class="fas fa-heart text-danger"></i><%= book.favorites.count %>
             <% end %>
           </td>
         <% else %>
           <td>
             <%= link_to book_favorites_path(book), method: :post do %>
-             ♡<%= book.favorites.count %>
+             <i class="fas fa-heart text-primary"></i><%= book.favorites.count %>
             <% end %>
           </td>
         <% end %>
