--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,29 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th>
+      <%= link_to user.followings.count, user_followings_path(user.id) %>
+    </th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>
+      <%= link_to user.followers.count, user_followers_path(user.id) %>
+    </th>
+  </tr>
+  <tr>
+    <td>
+      <% if user != current_user %>
+        <% if current_user.following?(user) %>
+          <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-sm btn-danger" %>
+        <% else %>
+          <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-sm btn-success" %>
+        <% end %>
+      <% end %>
+    </td>
+  </tr>
 </table>
 
 <div class='row'>
