--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,20 +17,10 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :delete do %>
-             <%# FontAwesomeはaタグの中では使えないのでiクラスで使用する %>
-             <i class="fas fa-heart text-danger"></i><%= book.favorites.count %>
-            <% end %>
-          </td>
-        <% else %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :post do %>
-             <i class="fas fa-heart text-primary"></i><%= book.favorites.count %>
-            <% end %>
-          </td>
-        <% end %>
+        <%# いいね機能に非同期通信化を設定した　%>
+        <td id="favorite_buttons_<%=book.id %>">
+            <%= render 'favorites/favorite', book: book %>
+        </td>
         <td>
           <p>コメント件数：<%= @book.book_comments.count %></p>
         </td>
