--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,42 +26,11 @@
       </table>
 
 
+      <div id="comment_area">
+        <%= render 'book_comments/comment', book: @book %>
+      </div>
 
-      <table class='table'>
-        <thead>
-          <tr>
-            <th></th>
-            <th>Comment</th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @book.book_comments.each do |book_comment| %>
-            <tr>
-              <td>
-                <%= link_to (@book.user) do %>
-                  <%= image_tag book_comment.user.get_profile_image, size: '100x100' %><br>
-                  <%= book_comment.user.name %>
-                <% end %>
-              </td>
-              <td><%= book_comment.comment %></td>
-              <td>
-                <% if book_comment.user == current_user %>
-                  <%= link_to 'Destroy', book_book_comment_path(@book.id, book_comment.id), method: :delete, class: "btn btn-sm btn-danger" %>
-                  <%# book_book_comment_path(@book.id)からbook_book_comment_path(@book.id, book_comment.id)に変更。本の情報とコメントの情報を渡す %>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-
-          <%= form_with model: [@book, @book_comment] do |f| %>
-            <%= f.text_area :comment, size: '85x5' %>
-            <%= f.submit "送信" %>
-          <% end %>
-
+      <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
