--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,29 +1,21 @@
-  <table class='table'>
-    <thead>
+<table class='table'>
+  <tbody>
+    <% book.book_comments.each do |book_comment| %>
       <tr>
-        <th></th>
-        <th>Comment</th>
-        <th></th>
-        <th></th>
+        <td>
+          <%= link_to user_path(book_comment.user) do %>
+            <%= image_tag book_comment.user.get_profile_image, size: '100x100' %><br>
+            <%= book_comment.user.name %>
+          <% end %>
+        </td>
+        <td><%= book_comment.comment %></td>
+        <td>
+          <% if book_comment.user == current_user %>
+            <%= link_to 'Destroy', book_book_comment_path(book.id, book_comment.id), method: :delete, remote: true, class: "btn btn-danger pull-right" %>
+            <%# book_book_comment_path(@book.id)からbook_book_comment_path(@book.id, book_comment.id)に変更。本の情報とコメントの情報を渡す %>
+          <% end %>
+        </td>
       </tr>
-    </thead>
-    <tbody>
-      <% book.book_comments.each do |book_comment| %>
-        <tr>
-          <td>
-            <%= link_to (book.user) do %>
-              <%= image_tag book_comment.user.get_profile_image, size: '100x100' %><br>
-              <%= book_comment.user.name %>
-            <% end %>
-          </td>
-          <td><%= book_comment.comment %></td>
-          <td>
-            <% if book_comment.user == current_user %>
-              <%= link_to 'Destroy', book_book_comment_path(book.id, book_comment.id), method: :delete, remote: true, class: "btn btn-sm btn-danger" %>
-              <%# book_book_comment_path(@book.id)からbook_book_comment_path(@book.id, book_comment.id)に変更。本の情報とコメントの情報を渡す %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+    <% end %>
+  </tbody>
+</table>
