--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,2 @@
-$('s').html("<%= j(render "book_comments/comment", book: @book) %>")
+$('comment_area').html("<%= j(render "book_comments/comment", book: @book) %>")
 $('.comment-textarea').val("") <%# コメント送信後フォームを空白にする %>
