--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,19 +10,17 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td>
-          <%= link_to(book.user) do %>
+        <td><%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <%# いいね機能に非同期通信化を設定した　%>
         <td id="favorite_buttons_<%=book.id %>">
             <%= render 'favorites/favorite', book: book %>
         </td>
         <td>
-          <p>コメント件数：<%= @book.book_comments.count %></p>
+          <p>コメント数：<%= @book.book_comments.count %></p>
         </td>
       </tr>
     <% end %>
