--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,15 +11,7 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
-        <td>
-          <% if user != current_user %>
-            <% if current_user.following?(user) %>
-              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
-            <% else %>
-              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
-            <% end %>
-          <% end %>
-        </td>
+        <td><%= render "relationships/btn", user: user %></td>
         <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
