--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -20,18 +20,17 @@
       <%= link_to user.followers.count, user_followers_path(user.id) %>
     </th>
   </tr>
-  <tr>
-    <td>
-      <% if user != current_user %>
-        <% if current_user.following?(user) %>
-          <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-sm btn-danger" %>
-        <% else %>
-          <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-sm btn-success" %>
-        <% end %>
-      <% end %>
-    </td>
-  </tr>
 </table>
+
+<div class='row'>
+  <% if current_user != user %>
+    <td><%= render "relationships/btn", user: user %></td>
+  <% else %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% end %>
+</div>
 
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
