--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,10 +27,10 @@
 
 
       <div id="comment_area">
-        <%= render 'book_comments/comment', book: @book %>
+        <%= render "book_comments/comment", book: @book %>
       </div>
 
-      <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
+        <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
