--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,2 @@
 $('#comment_area').html("<%= j(render "book_comments/comment", book: @book) %>")
-$('.comment-textarea').val("") <%# コメント送信後フォームを空白にする %>
+$('.comment-textarea').val("")
