--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -15,7 +15,8 @@
   <%= render "layouts/errors", obj: @chat %>
 </div>
 
-<%= form_with model: @chat, data: {remote: true} do |f| %>
+<%= form_with model: @chat, url: chat_
+path, data: {remote: true} do |f| %>
   <%= f.text_field :message %>
   <%= f.hidden_field :room_id %>
 <% end %>
